--- a/upper.html
+++ b/upper.html
@@ -374,7 +374,7 @@
                 </div>
             </div>
         </section>
-        <section id="LateralRaise">
+        <section id="LateralDumbbellRaise">
             <div class="workout" data-page="6">
                 <h2>Lateral Dumbbell Raise</h2>
                 <div class="container">
@@ -387,7 +387,7 @@
                         <div class="set-reps">
                             <div class="set-number">Set 1</div>
                             <div class="reps-weights">
-                                <form method="get" data-set="17" onsubmit="saveData(event, 'LateralRaise', 17)">
+                                <form method="get" data-set="17" onsubmit="saveData(event, 'LateralDumbbellRaise', 17)">
                                     <div>
                                         <label>Reps</label>
                                         <input type="number" name="reps" placeholder="8-10"
@@ -403,7 +403,7 @@
                         <div class="set-reps">
                             <div class="set-number">Set 2</div>
                             <div class="reps-weights">
-                                <form method="get" data-set="18" onsubmit="saveData(event,  'LateralRaise', 18)">
+                                <form method="get" data-set="18" onsubmit="saveData(event,  'LateralDumbbellRaise', 18)">
                                     <div>
                                         <label>Reps</label>
                                         <input type="number" name="reps" placeholder="8-10"
@@ -419,7 +419,7 @@
                         <div class="set-reps">
                             <div class="set-number">Set 3</div>
                             <div class="reps-weights">
-                                <form method="get" data-set="19" onsubmit="saveData(event, 'LateralRaise', 19)">
+                                <form method="get" data-set="19" onsubmit="saveData(event, 'LateralDumbbellRaise', 19)">
                                     <div>
                                         <label>Reps</label>
                                         <input type="number" name="reps" placeholder="8-10"
@@ -436,9 +436,9 @@
                 </div>
             </div>
         </section>
-        <section id="BicepCurl">
+        <section id="SeatedInclineBicepCurl">
             <div class="workout" data-page="7">
-                <h2>Seated Incline Dumbbell Curl</h2>
+                <h2>Seated Incline Bicep Curl</h2>
                 <div class="container">
                     <div class="display">
                         <img src="images/inclineCurl.png" alt="incline dumbbell curl" height="250px">
