--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Upper/Lower Split</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
+    <script src="script.js"></script>
     <style>
         
         * {
@@ -21,27 +22,50 @@
         
     </style>
 </head>
-<body>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="upper.html">Upper</a></li>
-            <li><a href="lower.html">Lower</a></li>
-            <li><a href="stats.html">Statistics</a></li>
-        </ul>
-    </nav>
-    <h1>Upper/ Lower Body Workout</h1>
-    <div class="choice">
-        <h2 id="choiceText">Choose your workout</h2>
-        <div id="workouts">
-            <form style="display: inline" action="upper.html" method="get">
-                <button type="submit" id="upper">Upper Body</button>
-            </form>
-            <form style="display: inline" action="lower.html" method="get">
-                <button type="submit" id="lower">Lower Body</button>
-            </form>
+<body class="wrapper">
+    <header>
+        <nav>
+            <div class="openMenu">
+                <i class="fa-solid fa-bars"></i>
+            </div>
+                <div class="links">
+                <div class="closeMenu">
+                    <i class="fa-solid fa-circle-xmark"></i>
+                </div>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="upper.html">Upper</a></li>
+                    <li><a href="lower.html">Lower</a></li>
+                    <li><a href="stats.html">Statistics</a></li>
+                </ul>
+            </div>
+        </nav>
+        <h1>Upper/Lower Workout</h1>
+    </header>
+    <aside>
+        <div>
+            <h2>Choose your workout</h2>
+            <div class="choice">
+                <form style="display: inline" action="upper.html" method="get">
+                    <button type="submit">UPPER</button>
+                </form>
+                <form style="display: inline" action="lower.html" method="get">
+                    <button type="submit">LOWER</button>
+                </form>
+            </div>
         </div>
-    </div>
+
+    </aside>
+    <main>
+        <div>
+            <h3>About</h3>
+            <p>This workout program is based on the Upper/Lower Body routine designed by Jeremy Ethier. The purpose of this website is to help those who are participating in the program to have a quick and easy way of recording their progress.<br><br>For more information on the program, please see the videos attached below.</p>
+            <div class="videos">
+                <iframe width="460" height="250" src="https://www.youtube.com/embed/acp77RhVzMM" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="460" height="250" src="https://www.youtube.com/embed/YPLopuFxz-0" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+        </div>
+    </main>
 
 </body>
 </html>
