Final Changes before submission

--- a/lower.html
+++ b/lower.html
@@ -21,7 +21,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="upper.html">Upper</a></li>
-                    <li><a href="lower.html">Lower</a></li>
+                    <li><a class="active" href="lower.html">Lower</a></li>
                     <li><a href="stats.html">Statistics</a></li>
                 </ul>
             </div>
