--- a/stats.html
+++ b/stats.html
@@ -22,7 +22,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="upper.html">Upper</a></li>
                     <li><a href="lower.html">Lower</a></li>
-                    <li><a href="stats.html">Statistics</a></li>
+                    <li><a class="active" href="stats.html">Statistics</a></li>
                 </ul>
             </div>
         </nav>
