--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <i class="fa-solid fa-circle-xmark"></i>
                 </div>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a class="active" href="index.html">Home</a></li>
                     <li><a href="upper.html">Upper</a></li>
                     <li><a href="lower.html">Lower</a></li>
                     <li><a href="stats.html">Statistics</a></li>
@@ -54,18 +54,16 @@
                 </form>
             </div>
         </div>
-
     </aside>
     <main>
-        <div>
+        <div class="home">
             <h3>About</h3>
             <p>This workout program is based on the Upper/Lower Body routine designed by Jeremy Ethier. The purpose of this website is to help those who are participating in the program to have a quick and easy way of recording their progress.<br><br>For more information on the program, please see the videos attached below.</p>
-            <div class="videos">
-                <iframe width="460" height="250" src="https://www.youtube.com/embed/acp77RhVzMM" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <iframe width="460" height="250" src="https://www.youtube.com/embed/YPLopuFxz-0" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            </div>
+        <div class="videos">
+            <iframe width="460" height="250" src="https://www.youtube.com/embed/acp77RhVzMM" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="460" height="250" src="https://www.youtube.com/embed/YPLopuFxz-0" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
         </div>
     </main>
-
 </body>
 </html>
