--- a/upper.html
+++ b/upper.html
@@ -20,7 +20,7 @@
                 </div>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="upper.html">Upper</a></li>
+                    <li><a class="active" href="upper.html">Upper</a></li>
                     <li><a href="lower.html">Lower</a></li>
                     <li><a href="stats.html">Statistics</a></li>
                 </ul>
